apps/wallabag/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app.kubernetes.io/name: wallabag
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallabag
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /var/www/wallabag/data
            - name: images
              mountPath: /var/www/wallabag/web/assets/images
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallabag-data
        - name: images
          persistentVolumeClaim:
            claimName: wallabag-images
